# VaultCanvas

./: .gitignore  Cargo.toml  README.md  flutter_rust_bridge.yaml
apps/desktop/: README.md  pubspec.yaml
apps/desktop/lib/: main.dart
apps/desktop/lib/app/: app.dart
apps/desktop/lib/features/crypto/: crypto_page.dart
apps/desktop/lib/features/dashboard/: dashboard_page.dart
apps/desktop/lib/features/history/: history_page.dart
apps/desktop/lib/features/passwords/: passwords_page.dart
apps/desktop/lib/features/settings/: settings_page.dart
apps/desktop/lib/features/stego/: stego_page.dart
apps/desktop/lib/services/: file_dialog_service.dart  security_bridge.dart
apps/desktop/lib/shared/: app_shell.dart  drop_input_field.dart  page_header.dart  scene_switch.dart  section_card.dart  theme.dart  workspace_page.dart
apps/desktop/linux/: CMakeLists.txt
apps/desktop/linux/runner/: my_application.cc
apps/desktop/macos/Runner.xcodeproj/: project.pbxproj
apps/desktop/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
apps/desktop/macos/Runner/Configs/: AppInfo.xcconfig
apps/desktop/test/: crypto_bridge_test.dart  security_bridge_test.dart  stego_bridge_test.dart  widget_test.dart
apps/desktop/windows/: CMakeLists.txt
apps/desktop/windows/runner/: Runner.rc  main.cpp
apps/macos_native/: Cargo.toml
apps/macos_native/src/: main.rs
apps/native_gui/: Cargo.toml
apps/native_gui/src/: lib.rs
apps/windows_native/: Cargo.toml  build.rs
apps/windows_native/src/: main.rs
crates/bench_runner/: Cargo.toml
crates/bench_runner/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/crypto_engine/: Cargo.toml
crates/crypto_engine/src/: lib.rs
crates/password_engine/: Cargo.toml
crates/password_engine/src/: lib.rs
crates/security_core/: Cargo.toml
crates/security_core/src/: frb_generated.rs  lib.rs
crates/security_core/src/api/: mod.rs  types.rs
crates/security_service/: Cargo.toml
crates/security_service/src/: lib.rs
crates/stego_engine/: Cargo.toml
crates/stego_engine/src/: lib.rs
demo/: ds写的加密器.py  ds写的隐写器.py
docs/: development-roadmap.md  file-format.md  flutter-rust-bridge-notes.md  product-architecture.md
scripts/: benchmark_engines.ps1  package_macos_app.sh  package_windows_portable.ps1  package_windows_single.ps1
