[workspace]
members = [
  "apps/windows_native",
  "crates/bench_runner",
  "crates/common",
  "crates/password_engine",
  "crates/crypto_engine",
  "crates/stego_engine",
  "crates/security_core",
  "crates/security_service",
]

resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
argon2 = "0.5"
aes = "0.8"
aes-gcm = "0.10"
blake3 = "1"
cbc = "0.1"
cipher = "0.4"
chacha20poly1305 = "0.10"
flate2 = "1"
pbkdf2 = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
thiserror = "2"
zeroize = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false
