[package]
name = "vaultcanvas_windows_native"
edition.workspace = true
license.workspace = true
version.workspace = true
build = "build.rs"

[[bin]]
name = "vaultcanvas_windows_native"
path = "src/main.rs"

[dependencies]
eframe = "0.31"
rfd = "0.15"
security_service = { path = "../../crates/security_service" }

[build-dependencies]
winres = "0.1"
